fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/Territory_Alignment__c.object-meta.xml
<CustomObject>
    <label>Territory Alignment Rules</label>
    <nameField>
        <label>ZPSA Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Alignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>