fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Alt_Filter_Key__c.field-meta.xml
<CustomField>
    <fullName>Alt_Filter_Key__c</fullName>
    <externalId>true</externalId>
    <label>Alt Filter Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>