fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Alt_Filter_Key_Check__c.field-meta.xml
<CustomField>
    <fullName>Alt_Filter_Key_Check__c</fullName>
    <formula>Alt_Filter_Key__c = Zipcode__c &amp; &quot;-&quot; &amp; ZPSA_Table__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alt Filter Key Check</label>
    <type>Checkbox</type>
</CustomField>