fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Customer_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_Name__c</fullName>
    <label>Customer Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>