fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Fix_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Fix_Territory_Name__c</fullName>
    <formula>ZPSA_Table__c &amp; &quot;-&quot; &amp;
Matching_Logic__c &amp; &quot;-&quot; &amp; 
Territory__c &amp; 
if(!ISBLANK(Territory2__c),&quot;-&quot; &amp; Territory2__c,
if(!ISBLANK(Territory3__c),&quot;-&quot; &amp; Territory3__c,
if(!ISBLANK(Territory4__c),&quot;-&quot; &amp; Territory4__c,
&quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fix Territory Name</label>
    <type>Text</type>
</CustomField>