fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Manually_Added__c.field-meta.xml
<CustomField>
    <fullName>Manually_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A rule that was created by hand.</inlineHelpText>
    <label>Manually Added</label>
    <type>Checkbox</type>
</CustomField>