fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Product_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Class_Name__c</fullName>
    <label>Product Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>