fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Product_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierarchy__c</fullName>
    <label>Product Hierarchy</label>
    <length>4</length>
    <type>Text</type>
</CustomField>