fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>State/Region</description>
    <label>Region</label>
    <length>5</length>
    <type>Text</type>
</CustomField>