fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Sales_Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_Name__c</fullName>
    <label>Sales Region Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>