fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Territory2__c.field-meta.xml
<CustomField>
    <fullName>Territory2__c</fullName>
    <label>Territory2</label>
    <length>8</length>
    <type>Text</type>
</CustomField>