fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Territory3__c.field-meta.xml
<CustomField>
    <fullName>Territory3__c</fullName>
    <label>Territory3</label>
    <length>8</length>
    <type>Text</type>
</CustomField>