fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Territory4__c.field-meta.xml
<CustomField>
    <fullName>Territory4__c</fullName>
    <label>Territory4</label>
    <length>8</length>
    <type>Text</type>
</CustomField>