fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Territory_4_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_4_Name__c</fullName>
    <label>Territory 4 Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>