fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Zip10__c.field-meta.xml
<CustomField>
    <fullName>Zip10__c</fullName>
    <label>Zip10</label>
    <length>10</length>
    <type>Text</type>
</CustomField>