fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Zip3__c.field-meta.xml
<CustomField>
    <fullName>Zip3__c</fullName>
    <label>Zip3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>