fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/Zipcode_Temp__c.field-meta.xml
<CustomField>
    <fullName>Zipcode_Temp__c</fullName>
    <formula>IF(!ISBLANK(Zip3__c), Zip3__c,
IF(!ISBLANK(Zip5__c), Zip5__c,
IF(!ISBLANK(Zip10__c), Zip10__c,
&apos;&apos;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zipcode Temp</label>
    <type>Text</type>
</CustomField>