fullSandbox11072023/force-app/main/default/objects/Territory_Alignment__c/fields/ZPSA_Priority__c.field-meta.xml
<CustomField>
    <fullName>ZPSA_Priority__c</fullName>
    <formula>CASE(ZPSA_Table__c, 
&quot;A679&quot;, 1, 
&quot;A680&quot;, 2, 
&quot;A681&quot;, 3, 
&quot;A654&quot;, 4, 
&quot;A659&quot;, 5, 
&quot;A622&quot;, 6, 
&quot;A615&quot;, 7, 
&quot;A664&quot;, 8, 
&quot;A663&quot;, 9, 
&quot;A668&quot;, 10, 
&quot;A667&quot;, 11, 
&quot;A672&quot;, 12, 
&quot;A671&quot;, 13, 
&quot;A675&quot;, 14, 
&quot;A688&quot;, 15, 
&quot;A689&quot;, 16,
999
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to pull the ZPSA rules in the proper alignment order to ensure the highest priority rule is aligned first.</inlineHelpText>
    <label>ZPSA Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>